--- a/.github/workflows/check-and-publish.yaml
+++ b/.github/workflows/check-and-publish.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Cargo Format
         uses: actions-rs/cargo@v1
         with:
-          commands: fmt
+          command: fmt
           args: --all -- --check
 
       - name: Cargo Clippy
