--- a/.github/workflows/check-and-publish.yaml
+++ b/.github/workflows/check-and-publish.yaml
@@ -42,9 +42,8 @@ jobs:
         with:
           command: test
 
-# TODO: Enable publish when crates.io for Figure Tech is sorted out
-#      - name: Publish to crates.io
-#        if: github.event_name == 'release'
-#        uses: katyo/publish-crates@v1
-#        with:
-#          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Publish to crates.io
+        if: github.event_name == 'release'
+        uses: katyo/publish-crates@v1
+        with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
