--- a/.github/workflows/check-and-publish.yaml
+++ b/.github/workflows/check-and-publish.yaml
@@ -14,7 +14,7 @@ env:
 jobs:
   check:
     name: Check Project and Publish on Release
-    runs-on: ubuntu-latest
+    runs-on: figure-linux-standard
     steps:
       - name: Checkout
         uses: actions/checkout@v2
